--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.9.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.22",
     "next": "15.5.3",
     "react": "19.1.0",
+    "react-datepicker": "^8.7.0",
     "react-dom": "19.1.0",
     "react-is": "^19.2.0",
     "recharts": "^3.2.1",
