--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tsparticles/slim": "^3.9.1",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
+    "cookies-next": "^6.1.0",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.22",
