--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   },
   "dependencies": {
     "@paypal/react-paypal-js": "^8.9.2",
+    "@rainbow-me/rainbowkit": "^2.2.9",
     "@react-oauth/google": "^0.12.2",
     "@tabler/icons-react": "^3.35.0",
     "@tailwindcss/cli": "^4.1.13",
-    "@tanstack/react-query": "^5.90.2",
+    "@tanstack/react-query": "^5.90.5",
     "@tsparticles/engine": "^3.9.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.9.1",
@@ -29,7 +30,9 @@
     "react-is": "^19.2.0",
     "recharts": "^3.2.1",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "viem": "^2.38.3",
+    "wagmi": "^2.18.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.13",
