invoice modal added

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
     "@paypal/react-paypal-js": "^8.9.2",
     "@rainbow-me/rainbowkit": "^2.2.9",
     "@react-oauth/google": "^0.12.2",
