--- a/package.json
+++ b/package.json
@@ -22,13 +22,17 @@
     "clsx": "^2.1.1",
     "cookies-next": "^6.1.0",
     "date-fns": "^4.1.0",
+    "ether": "^0.0.9",
     "lucide-react": "^0.544.0",
+    "moment": "^2.30.1",
     "motion": "^12.23.22",
     "next": "15.5.3",
     "react": "19.1.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-datepicker": "^8.7.0",
     "react-dom": "19.1.0",
     "react-is": "^19.2.0",
+    "react-timer-hook": "^4.0.5",
     "recharts": "^3.2.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
