--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "clsx": "^2.1.1",
     "cookies-next": "^6.1.0",
     "date-fns": "^4.1.0",
-    "ether": "^0.0.9",
+    "ethers": "^6.15.0",
     "lucide-react": "^0.544.0",
     "moment": "^2.30.1",
     "motion": "^12.23.22",
