--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cookies-next": "^6.1.0",
     "date-fns": "^4.1.0",
     "ethers": "^6.15.0",
+    "jotai": "^2.15.0",
     "lucide-react": "^0.544.0",
     "moment": "^2.30.1",
     "motion": "^12.23.22",
