--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cookies-next": "^6.1.0",
     "date-fns": "^4.1.0",
     "ethers": "^6.15.0",
+    "formik": "^2.4.6",
     "jotai": "^2.15.0",
     "lucide-react": "^0.544.0",
     "moment": "^2.30.1",
@@ -38,7 +39,8 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "viem": "^2.38.3",
-    "wagmi": "^2.18.1"
+    "wagmi": "^2.18.1",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.13",
