--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "ethers": "^6.15.0",
     "formik": "^2.4.6",
     "jotai": "^2.15.0",
+    "lightweight-charts": "^5.0.9",
+    "lightweight-charts-react-components": "^1.4.0",
     "lucide-react": "^0.544.0",
     "moment": "^2.30.1",
     "motion": "^12.23.22",
