--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-circular-progressbar": "^2.2.0",
     "react-datepicker": "^8.7.0",
     "react-dom": "19.1.0",
+    "react-fast-marquee": "^1.6.5",
     "react-is": "^19.2.0",
     "react-timer-hook": "^4.0.5",
     "recharts": "^3.2.1",
