--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "lucide-react": "^0.544.0",
     "moment": "^2.30.1",
     "motion": "^12.23.22",
-    "next": "15.5.3",
+    "next": "^16.0.7",
     "react": "19.1.0",
     "react-circular-progressbar": "^2.2.0",
     "react-datepicker": "^8.7.0",
