--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "lucide-react": "^0.544.0",
     "moment": "^2.30.1",
     "motion": "^12.23.22",
-    "next": "^16.0.7",
-    "react": "19.1.0",
+    "next": "16.0.7",
+    "react": "19.2.1",
     "react-circular-progressbar": "^2.2.0",
     "react-datepicker": "^8.7.0",
-    "react-dom": "19.1.0",
+    "react-dom": "19.2.1",
     "react-fast-marquee": "^1.6.5",
-    "react-is": "^19.2.0",
+    "react-is": "19.2.1",
     "react-timer-hook": "^4.0.5",
     "recharts": "^3.2.1",
     "sonner": "^2.0.7",
@@ -50,12 +50,15 @@
     "@tailwindcss/postcss": "^4.1.13",
     "@tanstack/eslint-plugin-query": "^5.91.0",
     "@types/node": "24.5.2",
-    "@types/react": "19.1.13",
+    "@types/react": "19.2.7",
     "autoprefixer": "^10.4.21",
     "daisyui": "^5.1.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.13",
     "typescript": "5.9.2"
   },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
+  "overrides": {
+    "@types/react": "19.2.7"
+  }
 }
